Pushing to Heroku

--- a/public/notes.html
+++ b/public/notes.html
@@ -42,5 +42,6 @@
       </div>
     </div>
     <script src="/assets/js/index.js"></script>
+    <!-- <script src="/db/db.json"></script> -->
   </body>
 </html>
